Dev-RBI/src/objects/Tower__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Basement_Floors__c</fullName>
        <label>No.of Basement Floors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Parking_Floors__c</fullName>
        <label>No.of Parking Floors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_ResCom_Floors__c</fullName>
        <label>No.of Residential / Commercial Floors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Developer_BSP_per_Sq_Ft__c</fullName>
        <label>Avg Developer BSP (per Sq Ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Resale_Price_per_Sq_Ft__c</fullName>
        <label>Avg Resale Price (per Sq Ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Construction_Start_Date__c</fullName>
        <label>Construction Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deviation__c</fullName>
        <description>Stores the deviation for a Tower</description>
        <label>Deviation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Comment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>IF( ISNULL(Proposed_Completion_Date__c)  ||  ISNULL(Launch_Date__c), 0, 
((YEAR( Proposed_Completion_Date__c ) - YEAR(Launch_Date__c)) *12) + (MONTH(
Proposed_Completion_Date__c ) - MONTH( Launch_Date__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Slabs_to_be_cast__c</fullName>
        <formula>IF(ISBLANK(Planned_Parking_Floors__c), 0, Planned_Parking_Floors__c)+IF(ISBLANK(Planned_ResCom_Floors__c), 0, Planned_ResCom_Floors__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Floor Slabs to be cast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launched_Units__c</fullName>
        <label>Launched Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Avg_Developer_BSP_per_Sq_Ft__c</fullName>
        <label>Max Avg Developer BSP (per Sq Ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Avg_Resale_Price_Per_Sqft__c</fullName>
        <description>Used to store Avg Resale Price (Per Sqft)</description>
        <label>Max Avg Resale Price (Per Sqft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Floors__c</fullName>
        <description>Used in validation rule</description>
        <formula>IF( Planned__c &lt; Proposed__c , Proposed__c,Planned__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Floors</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Avg_Developer_BSP_per_Sq_Ft__c</fullName>
        <description>Used to store min avg developer BSP</description>
        <label>Min Avg Developer BSP (per Sq Ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Avg_Resale_Price_Per_Sqft__c</fullName>
        <description>Used to store Min Avg Resale Price (Per Sqft)</description>
        <label>Min Avg Resale Price (Per Sqft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Basement_Floors__c</fullName>
        <label>No.of Basement Floors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Parking_Floors__c</fullName>
        <label>No.of Parking Floors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_ResCom_Floors__c</fullName>
        <label>No.of Residential / Commercial Floors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Structure__c</fullName>
        <formula>TEXT(Planned_Basement_Floors__c) &amp; &apos;B+&apos; &amp; TEXT(Planned_Parking_Floors__c) &amp; &apos;P+&apos;&amp;TEXT( Planned_ResCom_Floors__c)</formula>
        <label>Planned Structure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned__c</fullName>
        <formula>Planned_Basement_Floors__c  +  Planned_Parking_Floors__c  +  Planned_ResCom_Floors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Project_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Towers</relationshipLabel>
        <relationshipName>Towers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_construction_start_date__c</fullName>
        <formula>Project__r.Construction_Start_Date__c</formula>
        <label>Project construction start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Completion_Date__c</fullName>
        <label>Proposed Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed__c</fullName>
        <formula>Actual_Basement_Floors__c  +  Actual_Parking_Floors__c  +  Actual_ResCom_Floors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_completion_date_less_than_Launc__c</fullName>
        <formula>IF( OR( AND(ISNULL(Launch_Date__c), NOT(ISNULL( Proposed_Completion_Date__c))),(Proposed_Completion_Date__c &lt;= Launch_Date__c)) , true, false)</formula>
        <label>Proposed completion date less than Launc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ResCommCompare__c</fullName>
        <formula>IF( Actual_ResCom_Floors__c  &lt;  Planned_ResCom_Floors__c ,  Actual_ResCom_Floors__c ,  Planned_ResCom_Floors__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ResCommCompare</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Structure__c</fullName>
        <formula>TEXT(Actual_Basement_Floors__c)&amp;&apos;B+&apos;&amp;TEXT(Actual_Parking_Floors__c)&amp;&apos;P+&apos;&amp;TEXT(Actual_ResCom_Floors__c)</formula>
        <label>Site Structure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_Units__c</fullName>
        <label>Sold Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_unit_greater_Than_Launched_Unit__c</fullName>
        <formula>IF( OR(AND(ISNULL(Launched_Units__c), NOT(ISNULL( Sold_Units__c))),(Sold_Units__c &gt; Launched_Units__c)), true, false)</formula>
        <label>Sold unit greater Than Launched Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartdtDuration__c</fullName>
        <formula>IF( ISNULL(Construction_Start_Date__c) || ISNULL(Launch_Date__c), 0,
 ((YEAR( Construction_Start_Date__c ) - YEAR(Launch_Date__c)) *12) + (MONTH(
 Construction_Start_Date__c ) - MONTH(Launch_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StartdtDuration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Structure_as_per_Brochure__c</fullName>
        <label>Tower Structure on site</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Structure_as_per_Plan__c</fullName>
        <label>Structure as per Plan</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Floors__c</fullName>
        <formula>IF( Planned__c  &lt;  Proposed__c , Planned__c ,Proposed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Floors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Units__c</fullName>
        <label>Total Units</label>
        <summaryForeignKey>Unit__c.Tower_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tower_18_Digit_ID__c</fullName>
        <formula>Id &amp; 
MID( 
    &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
    MIN(FIND(MID(Id, 5, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
    MIN(FIND(MID(Id, 4, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
    MIN(FIND(MID(Id, 3, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
    MIN(FIND(MID(Id, 2, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
    MIN(FIND(MID(Id, 1, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
    1) &amp; 
MID( 
    &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
    MIN(FIND(MID(Id, 10, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
    MIN(FIND(MID(Id, 9, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
    MIN(FIND(MID(Id, 8, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
    MIN(FIND(MID(Id, 7, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
    MIN(FIND(MID(Id, 6, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
    1) &amp; 
MID( 
    &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
    MIN(FIND(MID(Id, 15, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
    MIN(FIND(MID(Id, 14, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
    MIN(FIND(MID(Id, 13, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
    MIN(FIND(MID(Id, 12, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
    MIN(FIND(MID(Id, 11, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
    1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tower 18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Tower_Name__c</fullName>
        <description>Field to determine uniqueness of the Tower Name. This field gets updated through the workflow.</description>
        <externalId>true</externalId>
        <label>Unique Tower Name</label>
        <length>98</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VisitDuration__c</fullName>
        <formula>IF( ISNULL(Project__r.Site_Visit_Date__c) || ISNULL(Launch_Date__c), 0, 
((YEAR(Project__r.Site_Visit_Date__c) - YEAR(Launch_Date__c)) *12) + 
(MONTH(Project__r.Site_Visit_Date__c) - MONTH( Launch_Date__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VisitDuration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Tower</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Sold_Units__c</columns>
        <columns>Total_Units__c</columns>
        <columns>Construction_Start_Date__c</columns>
        <columns>Launch_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tower Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IO0000000917SMAQ_00NO0000000rjkqMAA</fullName>
        <active>false</active>
        <field>Detail_Price_List__c.Tower__c</field>
        <filterItems>
            <field>Tower__c.Project__r.Id</field>
            <operation>equals</operation>
            <valueField>Tower__c.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Detail Price List_Tower</name>
    </namedFilters>
    <pluralLabel>Towers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Construction_Start_Date_of_the_Tower</fullName>
        <active>true</active>
        <description>User should be allowed to add construction start date of the tower only if the construction start date of the project is present</description>
        <errorConditionFormula>OR(AND( NOT( ISNULL(Project_construction_start_date__c)),ISNULL( Construction_Start_Date__c )) ,AND(ISNULL(Project_construction_start_date__c),NOT(ISNULL(Construction_Start_Date__c))))</errorConditionFormula>
        <errorMessage>You are not allowed to add construction start date of the tower if the construction start date of the project is blank and Viceversa</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MAX_Dev_BSP_should_be_greater_than_MIN</fullName>
        <active>true</active>
        <errorConditionFormula>Min_Avg_Developer_BSP_per_Sq_Ft__c &gt; Max_Avg_Developer_BSP_per_Sq_Ft__c</errorConditionFormula>
        <errorMessage>&apos;Max Avg Developer BSP&apos; should be greater than &apos;Min Avg  Developer BSP&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Max_Av_Resale_should_be_greater_than_Min</fullName>
        <active>true</active>
        <errorConditionFormula>Min_Avg_Resale_Price_Per_Sqft__c &gt; Max_Avg_Resale_Price_Per_Sqft__c</errorConditionFormula>
        <errorMessage>&apos;Max Avg Resale BSP &apos;should be greater than &apos;Min Avg Resale BSP&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Proposed_Completion_date_Validation_Rule</fullName>
        <active>true</active>
        <description>Proposed completion date should be greater than launch date</description>
        <errorConditionFormula>OR( 
AND(ISNULL(Launch_Date__c), NOT(ISNULL( Proposed_Completion_Date__c))),Proposed_Completion_Date__c &lt;= Launch_Date__c
)</errorConditionFormula>
        <errorMessage>Proposed completion date should be greater than launch date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Proposed_Date_greater_than_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Proposed_Completion_Date__c   &lt;   Construction_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Proposed_Completion_Date__c</errorDisplayField>
        <errorMessage>Proposed Completion Date should be greater than Construction start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sold_Unit_Validation_Rule</fullName>
        <active>true</active>
        <description>Unit sold should be less than or equal to launched units</description>
        <errorConditionFormula>OR(
  AND(ISNULL(Launched_Units__c), NOT(ISNULL( Sold_Units__c))),Sold_Units__c  &gt; Launched_Units__c
)</errorConditionFormula>
        <errorMessage>Sold units should be less than or equal to launched units</errorMessage>
    </validationRules>
</CustomObject>